k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-mvc-demo
  name: spring-mvc-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-mvc-demo
  template:
    metadata:
      labels:
        app: spring-mvc-demo
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/common-cicd/spring-mvc-demo:latest
          imagePullPolicy: Always
          name: spring-mvc-demo
          ports:
            - containerPort: 8080
              protocol: TCP
