k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-mvc-demo
  name: spring-mvc-demo
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: spring-mvc-demo
