k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-mvc-demo
  name: spring-mvc-demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-mvc-demo
    weight: 100
